Added example of creating embeddings with the Flux API